# esp32-spi-eppp-server

./: .gitignore  CMakeLists.txt  README.md  apply_patches.sh  sdkconfig.defaults  sdkconfig.esp32s2  sdkconfig.esp32s3
.github/workflows/: build.yml
components/espressif__eppp_link/: eppp_spi.c
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
patches/: eppp_link.patch  esp_bus.patch  esp_wifi_manager.patch
