idf_component_register(
    SRCS
        "main.c"
    PRIV_REQUIRES
        esp_driver_gpio
        esp_driver_spi
        esp_timer
        esp_wifi
        esp_netif
        nvs_flash
        console
        esp_http_server
        tuanpmt__esp_bus
        tuanpmt__esp_wifi_manager
    INCLUDE_DIRS
        "."
)
